# smiles-synolitic-correction

./: .gitignore  README.md  pyproject.toml
docs/: results.md
scripts/: extract_hidden_states.py  h1_length_control.py  h2_labeling_curve.py  h3_mirror_map.py  make_attention_figure.py  make_corrector_figure.py  make_dummy_data.py  make_graph_figure.py  make_h1_attention_baseline.py  make_h1_figure.py  run_corrector.py  train_model.py
src/synolitic/: __init__.py
src/synolitic/common/: __init__.py  dummy.py  io.py  schemas.py  seed.py
src/synolitic/stage1_model/: __init__.py  dataset.py  extract.py  model.py  train.py
src/synolitic/stage2_graphs/: __init__.py  build_graphs.py
src/synolitic/stage3_gnn/: __init__.py  train_gnn.py
src/synolitic/stage4_corrector/: __init__.py  corrector.py
tests/: test_build_graphs.py  test_contracts.py  test_corrector.py  test_extract.py  test_model.py
