[project]
name = "synolitic-correction"
version = "0.1.0"
description = "Synolitic graphs + provably-bounded error correctors for Transformer models (SMILES 2026)"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "torch>=2.2",
    "torch-geometric>=2.5",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "networkx>=3.2",
    "tqdm>=4.66",
    "matplotlib>=3.8",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/synolitic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
